buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}

apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'net.minecraftforge.gradle'

version = "8.0.2-${project.minecraft_sub_version}"
group = 'com.github.alexthe666.rats'
archivesBaseName = 'rats'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation" << "-Werror"

minecraft {
    mappings channel: 'official', version: '1.19.4'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'rats'

            mods {
                rats {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'rats'

            mods {
                rats {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'rats'

            mods {
                rats {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'rats', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                rats {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name 'Curseforge Maven'
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }

    maven {
        name 'Jared\'s Maven' // JEI
        url 'https://maven.blamejared.com/'
    }

    maven {
        name 'Gitlab Maven' // Debugging Utils
        url "https://gitlab.com/api/v4/projects/21830712/packages/maven"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraft_sub_version}-${project.forge_version}"

    implementation fg.deobf("mezz.jei:jei-${project.minecraft_sub_version}-forge:${project.jei_version}")
    implementation fg.deobf("curse.maven:citadel-331936:${project.citadel_version}")
    //runtimeOnly fg.deobf("curse.maven:structure-expansion-398430:3909814")
    runtimeOnly fg.deobf("curse.maven:commandstructures-565119:${project.cs_version}")
    runtimeOnly fg.deobf("io.github.flemmli97:debugutils:1.19.3-${project.du_version}-forge")
    runtimeOnly fg.deobf("curse.maven:domestication-innovation-591149:${project.di_version}")
    runtimeOnly fg.deobf("curse.maven:wanna-skate-695018:4476693")
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "Rats",
                "Specification-Vendor"    : "AlexThe666",
                "Specification-Version"   : "${version}",
                "Implementation-Title"    : "Rats",
                "Implementation-Version"  : "${version}",
                "Implementation-Vendor"   : "AlexThe666",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}